New: Bash code to execute the whole app